Ensure text remains visible during webfont load

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,18 +2,21 @@
   font-family: 'Montserrat';
   src: local('Montserrat'), url(../assets/fonts/Montserrat-Regular.ttf) format('truetype');
   font-weight: 400;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Montserrat';
   src: local('Montserrat'), url(../assets/fonts/Montserrat-Medium.ttf) format('truetype');
   font-weight: 500;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Montserrat';
   src: local('Montserrat'), url(../assets/fonts/Montserrat-SemiBold.ttf) format('truetype');
   font-weight: 600;
+  font-display: swap;
 }
 
 body {
